# voice2md

./: .env_template  .gitignore  README.md  app.py  copy_voice_memos.py  pyproject.toml  requirements.txt
tests/: test_copy_voice_memos.py
voice2md/: llm.py  note_templates.py  voice_memo.py
